Add community changes

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2,6 +2,7 @@
 
 advancedrocketry {
     B:advancedRocketrymetal0=true
+    B:advancedRocketrymetal0.1=true
     B:alienLeaves=false
     B:alienSapling=false
     B:alienWood=true
@@ -22,7 +23,9 @@ advancedrocketry {
     B:rocketmotor=false
     B:seat=false
     B:structureTower=false
+    B:tileadvRocket=false
     B:tilealititudeController=false
+    B:tileastroBed=false
     B:tileatmosphereDetector=false
     B:tileatmosphereTerraformer=false
     B:tilebiomeScanner=false
@@ -69,6 +72,7 @@ advancedrocketry {
     B:tileplanetSelector=false
     B:tileplanetanalyser=false
     B:tilepressurizedTank=false
+    B:tilerailgun=false
     B:tilerocketFuelBlock=false
     B:tilerollingMachine=false
     B:tilesatelliteMonitor=false
@@ -358,6 +362,79 @@ automagy {
     B:blockUnseenScribe=false
     B:blockVisReader=false
     B:blockXPStone=false
+}
+
+
+awwayoftime {
+    B:AlchemicalWizardrybloodRune=true
+    B:AlchemicalWizardrybloodRune.1=true
+    B:AlchemicalWizardrybloodRune.2=true
+    B:AlchemicalWizardrybloodRune.3=true
+    B:AlchemicalWizardrybloodRune.4=true
+    B:AlchemicalWizardrybloodRune.5=true
+    B:AlchemicalWizardrytileblockSpellEffect=false
+    B:AlchemicalWizardrytileblockSpellEffect.1=false
+    B:AlchemicalWizardrytileblockSpellEffect.2=false
+    B:AlchemicalWizardrytileblockSpellEffect.3=false
+    B:AlchemicalWizardrytileblockSpellEnhancement=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.1=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.10=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.11=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.12=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.13=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.14=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.2=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.3=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.4=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.5=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.6=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.7=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.8=false
+    B:AlchemicalWizardrytileblockSpellEnhancement.9=false
+    B:AlchemicalWizardrytileblockSpellModifier=false
+    B:AlchemicalWizardrytileblockSpellModifier.1=false
+    B:AlchemicalWizardrytileblockSpellModifier.2=false
+    B:AlchemicalWizardrytileblockSpellModifier.3=false
+    B:AlchemicalWizardrytileblockSpellParadigm=false
+    B:AlchemicalWizardrytileblockSpellParadigm.1=false
+    B:AlchemicalWizardrytileblockSpellParadigm.2=false
+    B:AlchemicalWizardrytileblockSpellParadigm.3=false
+    B:Altar=false
+    B:armourForge=true
+    B:blockAlchemicCalcinator=false
+    B:blockConduit=false
+    B:blockCrucible=false
+    B:blockCrystal=true
+    B:blockCrystal.1=true
+    B:blockCrystalBelljar=false
+    B:blockDemonChest=false
+    B:blockEnchantmentGlyph=true
+    B:blockEnchantmentGlyph.1=true
+    B:blockHomHeart=false
+    B:blockMimic=false
+    B:blockPedestal=false
+    B:blockPlinth=false
+    B:blockReagentConduit=false
+    B:blockSchemSaver=false
+    B:blockStabilityGlyph=true
+    B:blockTeleposer=false
+    B:blockWritingTable=false
+    B:bloodLight=false
+    B:bloodSocket=false
+    B:bloodStoneBrick=true
+    B:demonPortalMain=false
+    B:efficiencyRune=true
+    B:emptySocket=false
+    B:imperfectRitualStone=true
+    B:largeBloodStoneBrick=true
+    B:lifeEssence=false
+    B:masterStone=false
+    B:ritualStone=true
+    B:runeOfSacrifice=true
+    B:runeOfSelfSacrifice=true
+    B:spectralBlock=false
+    B:spectralContainer=false
+    B:speedRune=true
 }
 
 
@@ -3170,6 +3247,12 @@ chisel {
     B:birchplanks.7=true
     B:birchplanks.8=true
     B:birchplanks.9=true
+    B:bloodRune=true
+    B:bloodRune.1=true
+    B:bloodRune.2=true
+    B:bloodRune.3=true
+    B:bloodRune.4=true
+    B:bloodRune.5=true
     B:bookshelf.1=true
     B:bookshelf.2=true
     B:bookshelf.3=true
@@ -5115,6 +5198,13 @@ eln {
     B:ElnSixNode.7561=false
     B:ElnSixNode.7562=false
     B:ElnSixNode.7563=false
+    B:ElnSixNode.7936=false
+    B:ElnSixNode.7937=false
+    B:ElnSixNode.7938=false
+    B:ElnSixNode.7939=false
+    B:ElnSixNode.7940=false
+    B:ElnSixNode.7941=false
+    B:ElnSixNode.7942=false
     B:ElnTransparentNode=false
     B:ElnghostBlock=false
     B:ElnlightBlock=false
@@ -18430,12 +18520,14 @@ libvulpes {
     B:blockPlaceholder=false
     B:blockStructureBlock=false
     B:libVulpescoil0.4=true
+    B:libVulpesmetal0.10=true
     B:libVulpesmetal0.4=true
     B:libVulpesmetal0.5=true
     B:libVulpesmetal0.6=true
     B:libVulpesmetal0.7=true
     B:libVulpesmetal0.9=true
     B:libVulpesore0=true
+    B:libVulpesore0.10=true
     B:libVulpesore0.4=true
     B:libVulpesore0.5=true
     B:libVulpesore0.8=true
@@ -18763,6 +18855,20 @@ mariculture {
     B:woods=true
     B:woods.1=true
     B:woods.2=true
+}
+
+
+mca {
+    B:BlockVillagerBedBlue=false
+    B:BlockVillagerBedGreen=false
+    B:BlockVillagerBedPink=false
+    B:BlockVillagerBedPurple=false
+    B:BlockVillagerBedRed=false
+    B:VillagerSpawner=false
+    B:tilememorialblock=false
+    B:tilenull=false
+    B:tileroseGoldBlock=true
+    B:tileroseGoldOre=true
 }
 
 
@@ -23575,6 +23681,16 @@ sync {
 }
 
 
+taintedmagic {
+    B:BlockShadowOre=true
+    B:BlockShadowmetal=true
+    B:BlockWarpwoodLeaves=true
+    B:BlockWarpwoodLog=true
+    B:BlockWarpwoodPlanks=true
+    B:BlockWarpwoodSapling=false
+}
+
+
 tc {
     B:assemblyTableI=false
     B:assemblyTableII=false
@@ -24120,6 +24236,37 @@ thaumicenergistics {
 }
 
 
+thaumicexploration {
+    B:autoSorter=false
+    B:boundChest=false
+    B:boundJar=false
+    B:crucibleSouls=false
+    B:everburnUrn=false
+    B:everfullUrn=false
+    B:floatCandle=false
+    B:floatCandle.1=false
+    B:floatCandle.10=false
+    B:floatCandle.11=false
+    B:floatCandle.12=false
+    B:floatCandle.13=false
+    B:floatCandle.14=false
+    B:floatCandle.15=false
+    B:floatCandle.2=false
+    B:floatCandle.3=false
+    B:floatCandle.4=false
+    B:floatCandle.5=false
+    B:floatCandle.6=false
+    B:floatCandle.7=false
+    B:floatCandle.8=false
+    B:floatCandle.9=false
+    B:meltyIce=false
+    B:replicator=false
+    B:soulBrazier=false
+    B:thinkTankJar=false
+    B:trashJar=false
+}
+
+
 thaumichorizons {
     B:PortalTH=false
     B:alchemite=true
@@ -24399,6 +24546,194 @@ twilightforest {
     B:tileUberousSoil=false
     B:tileUnripeTrollBer=false
     B:tileWispyCloud=false
+}
+
+
+witchery {
+    B:alderwooddoor=false
+    B:alluringskull=false
+    B:altar=false
+    B:artichoke=false
+    B:barrier=false
+    B:beartrap=false
+    B:belladonna=false
+    B:bloodcrucible=false
+    B:bloodedwool=true
+    B:bloodrose=false
+    B:bramble=false
+    B:bramble.1=false
+    B:brazier=false
+    B:brew=false
+    B:brewgas=false
+    B:brewliquid=false
+    B:cactus=false
+    B:candelabra=false
+    B:cauldron=false
+    B:cbuttonstone=false
+    B:cbuttonwood=false
+    B:chalice=false
+    B:circle=false
+    B:circleglyphinfernal=false
+    B:circleglyphotherwhere=false
+    B:circleglyphritual=false
+    B:clever=false
+    B:coffinblock=false
+    B:crittersnare=false
+    B:crystalball=false
+    B:csnowpressureplate=false
+    B:cstonepressureplate=false
+    B:cwoodendoor=false
+    B:cwoodpressureplate=false
+    B:daylightcollector=false
+    B:decursedirected=false
+    B:decurseteleport=false
+    B:demonheart=false
+    B:disease=false
+    B:distilleryburning=false
+    B:distilleryidle=false
+    B:dreamcatcher=false
+    B:embermoss=false
+    B:filteredfumefunnel=false
+    B:force=false
+    B:fumefunnel=false
+    B:garlicgarland=false
+    B:garlicplant=false
+    B:glintweed=false
+    B:glowglobe=false
+    B:grassper=false
+    B:hollowtears=false
+    B:icedoor=false
+    B:icedoubleslab=false
+    B:icefence=false
+    B:icefencegate=false
+    B:icepressureplate=false
+    B:iceslab=false
+    B:icestairs=false
+    B:icestockade=false
+    B:infinityegg=false
+    B:kettle=false
+    B:leapinglily=false
+    B:leechchest=false
+    B:light=false
+    B:lilypad=false
+    B:mandrake=false
+    B:mindrake=false
+    B:mirrorblock=false
+    B:mirrorblock2=false
+    B:mirrorwall=true
+    B:perpetualice=false
+    B:pitdirt=false
+    B:pitgrass=false
+    B:placeditem=false
+    B:plantmine=false
+    B:plantmine.1=false
+    B:plantmine.10=false
+    B:plantmine.11=false
+    B:plantmine.2=false
+    B:plantmine.3=false
+    B:plantmine.4=false
+    B:plantmine.5=false
+    B:plantmine.6=false
+    B:plantmine.7=false
+    B:plantmine.8=false
+    B:plantmine.9=false
+    B:poppetshelf=false
+    B:refillingchest=false
+    B:rowanwooddoor=false
+    B:scarecrow=false
+    B:shadedglass=false
+    B:shadedglass.1=false
+    B:shadedglass.10=false
+    B:shadedglass.11=false
+    B:shadedglass.12=false
+    B:shadedglass.13=false
+    B:shadedglass.14=false
+    B:shadedglass.15=false
+    B:shadedglass.2=false
+    B:shadedglass.3=false
+    B:shadedglass.4=false
+    B:shadedglass.5=false
+    B:shadedglass.6=false
+    B:shadedglass.7=false
+    B:shadedglass.8=false
+    B:shadedglass.9=false
+    B:shadedglassactive=false
+    B:shadedglassactive.1=false
+    B:shadedglassactive.10=false
+    B:shadedglassactive.11=false
+    B:shadedglassactive.12=false
+    B:shadedglassactive.13=false
+    B:shadedglassactive.14=false
+    B:shadedglassactive.15=false
+    B:shadedglassactive.2=false
+    B:shadedglassactive.3=false
+    B:shadedglassactive.4=false
+    B:shadedglassactive.5=false
+    B:shadedglassactive.6=false
+    B:shadedglassactive.7=false
+    B:shadedglassactive.8=false
+    B:shadedglassactive.9=false
+    B:silvervat=false
+    B:slurp=false
+    B:snowbell=false
+    B:snowdoubleslab=true
+    B:snowpressureplate=false
+    B:snowslab=false
+    B:snowstairs=false
+    B:somniancotton=false
+    B:spanishmoss=false
+    B:spinningwheel=false
+    B:spiritflowing=false
+    B:spiritportal=false
+    B:stairswoodalder=false
+    B:stairswoodhawthorn=false
+    B:stairswoodrowan=false
+    B:statuegoddess=false
+    B:statueofworship=false
+    B:stockade=false
+    B:stockade.1=false
+    B:stockade.2=false
+    B:stockade.3=false
+    B:stockade.4=false
+    B:stockade.5=false
+    B:stockade.6=false
+    B:stockade.7=false
+    B:stockade.8=false
+    B:tormentportal=false
+    B:tormentstone=true
+    B:trent=false
+    B:vine=false
+    B:voidbramble=false
+    B:wallgen=false
+    B:web=false
+    B:wickerbundle=true
+    B:wickerbundle.1=true
+    B:witchesovenburning=false
+    B:witchesovenidle=false
+    B:witchleaves=false
+    B:witchleaves.1=false
+    B:witchleaves.2=false
+    B:witchlog=true
+    B:witchlog.1=true
+    B:witchlog.2=true
+    B:witchsapling=false
+    B:witchsapling.1=false
+    B:witchsapling.2=false
+    B:witchsladder=false
+    B:witchwood=true
+    B:witchwood.1=true
+    B:witchwood.2=true
+    B:witchwooddoubleslab=true
+    B:witchwooddoubleslab.1=true
+    B:witchwooddoubleslab.2=true
+    B:witchwoodslab=false
+    B:witchwoodslab.1=false
+    B:witchwoodslab.2=false
+    B:wolfaltar=false
+    B:wolfhead=false
+    B:wolfsbane=false
+    B:wolftrap=false
+    B:wormwood=false
 }
 
 
