--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -171,6 +171,150 @@ potions {
 
 
 shedding {
+    # Configuration of Shedding for AWWayofTime.AirElemental
+    S:AWWayofTime.AirElemental.item=
+    I:AWWayofTime.AirElemental.lexiconDisplaySize=40
+    I:AWWayofTime.AirElemental.metadata=0
+    I:AWWayofTime.AirElemental.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.BileDemon
+    S:AWWayofTime.BileDemon.item=
+    I:AWWayofTime.BileDemon.lexiconDisplaySize=40
+    I:AWWayofTime.BileDemon.metadata=0
+    I:AWWayofTime.BileDemon.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.BoulderFist
+    S:AWWayofTime.BoulderFist.item=
+    I:AWWayofTime.BoulderFist.lexiconDisplaySize=40
+    I:AWWayofTime.BoulderFist.metadata=0
+    I:AWWayofTime.BoulderFist.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.EarthElemental
+    S:AWWayofTime.EarthElemental.item=
+    I:AWWayofTime.EarthElemental.lexiconDisplaySize=40
+    I:AWWayofTime.EarthElemental.metadata=0
+    I:AWWayofTime.EarthElemental.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.FallenAngel
+    S:AWWayofTime.FallenAngel.item=
+    I:AWWayofTime.FallenAngel.lexiconDisplaySize=40
+    I:AWWayofTime.FallenAngel.metadata=0
+    I:AWWayofTime.FallenAngel.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.FireElemental
+    S:AWWayofTime.FireElemental.item=
+    I:AWWayofTime.FireElemental.lexiconDisplaySize=40
+    I:AWWayofTime.FireElemental.metadata=0
+    I:AWWayofTime.FireElemental.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.HolyElemental
+    S:AWWayofTime.HolyElemental.item=
+    I:AWWayofTime.HolyElemental.lexiconDisplaySize=40
+    I:AWWayofTime.HolyElemental.metadata=0
+    I:AWWayofTime.HolyElemental.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.IceDemon
+    S:AWWayofTime.IceDemon.item=
+    I:AWWayofTime.IceDemon.lexiconDisplaySize=40
+    I:AWWayofTime.IceDemon.metadata=0
+    I:AWWayofTime.IceDemon.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.LowerGuardian
+    S:AWWayofTime.LowerGuardian.item=
+    I:AWWayofTime.LowerGuardian.lexiconDisplaySize=40
+    I:AWWayofTime.LowerGuardian.metadata=0
+    I:AWWayofTime.LowerGuardian.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGrunt
+    S:AWWayofTime.MinorDemonGrunt.item=
+    I:AWWayofTime.MinorDemonGrunt.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGrunt.metadata=0
+    I:AWWayofTime.MinorDemonGrunt.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntEarth
+    S:AWWayofTime.MinorDemonGruntEarth.item=
+    I:AWWayofTime.MinorDemonGruntEarth.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntEarth.metadata=0
+    I:AWWayofTime.MinorDemonGruntEarth.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntFire
+    S:AWWayofTime.MinorDemonGruntFire.item=
+    I:AWWayofTime.MinorDemonGruntFire.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntFire.metadata=0
+    I:AWWayofTime.MinorDemonGruntFire.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntGuardian
+    S:AWWayofTime.MinorDemonGruntGuardian.item=
+    I:AWWayofTime.MinorDemonGruntGuardian.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntGuardian.metadata=0
+    I:AWWayofTime.MinorDemonGruntGuardian.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntGuardianEarth
+    S:AWWayofTime.MinorDemonGruntGuardianEarth.item=
+    I:AWWayofTime.MinorDemonGruntGuardianEarth.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntGuardianEarth.metadata=0
+    I:AWWayofTime.MinorDemonGruntGuardianEarth.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntGuardianFire
+    S:AWWayofTime.MinorDemonGruntGuardianFire.item=
+    I:AWWayofTime.MinorDemonGruntGuardianFire.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntGuardianFire.metadata=0
+    I:AWWayofTime.MinorDemonGruntGuardianFire.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntGuardianIce
+    S:AWWayofTime.MinorDemonGruntGuardianIce.item=
+    I:AWWayofTime.MinorDemonGruntGuardianIce.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntGuardianIce.metadata=0
+    I:AWWayofTime.MinorDemonGruntGuardianIce.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntGuardianWind
+    S:AWWayofTime.MinorDemonGruntGuardianWind.item=
+    I:AWWayofTime.MinorDemonGruntGuardianWind.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntGuardianWind.metadata=0
+    I:AWWayofTime.MinorDemonGruntGuardianWind.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntIce
+    S:AWWayofTime.MinorDemonGruntIce.item=
+    I:AWWayofTime.MinorDemonGruntIce.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntIce.metadata=0
+    I:AWWayofTime.MinorDemonGruntIce.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.MinorDemonGruntWind
+    S:AWWayofTime.MinorDemonGruntWind.item=
+    I:AWWayofTime.MinorDemonGruntWind.lexiconDisplaySize=40
+    I:AWWayofTime.MinorDemonGruntWind.metadata=0
+    I:AWWayofTime.MinorDemonGruntWind.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.Shade
+    S:AWWayofTime.Shade.item=
+    I:AWWayofTime.Shade.lexiconDisplaySize=40
+    I:AWWayofTime.Shade.metadata=0
+    I:AWWayofTime.Shade.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.ShadeElemental
+    S:AWWayofTime.ShadeElemental.item=
+    I:AWWayofTime.ShadeElemental.lexiconDisplaySize=40
+    I:AWWayofTime.ShadeElemental.metadata=0
+    I:AWWayofTime.ShadeElemental.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.SmallEarthGolem
+    S:AWWayofTime.SmallEarthGolem.item=
+    I:AWWayofTime.SmallEarthGolem.lexiconDisplaySize=40
+    I:AWWayofTime.SmallEarthGolem.metadata=0
+    I:AWWayofTime.SmallEarthGolem.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.WaterElemental
+    S:AWWayofTime.WaterElemental.item=
+    I:AWWayofTime.WaterElemental.lexiconDisplaySize=40
+    I:AWWayofTime.WaterElemental.metadata=0
+    I:AWWayofTime.WaterElemental.rate=-1
+
+    # Configuration of Shedding for AWWayofTime.WingedFireDemon
+    S:AWWayofTime.WingedFireDemon.item=
+    I:AWWayofTime.WingedFireDemon.lexiconDisplaySize=40
+    I:AWWayofTime.WingedFireDemon.metadata=0
+    I:AWWayofTime.WingedFireDemon.rate=-1
+
     # Configuration of Shedding for AgriCraft.villagerFarmer
     S:AgriCraft.villagerFarmer.item=minecraft:emerald
     I:AgriCraft.villagerFarmer.lexiconDisplaySize=40
@@ -656,6 +800,18 @@ shedding {
     I:Lizard.lexiconDisplaySize=40
     I:Lizard.metadata=0
     I:Lizard.rate=-1
+
+    # Configuration of Shedding for MCA.EntityGrimReaper
+    S:MCA.EntityGrimReaper.item=
+    I:MCA.EntityGrimReaper.lexiconDisplaySize=40
+    I:MCA.EntityGrimReaper.metadata=0
+    I:MCA.EntityGrimReaper.rate=-1
+
+    # Configuration of Shedding for MCA.EntityHuman
+    S:MCA.EntityHuman.item=
+    I:MCA.EntityHuman.lexiconDisplaySize=40
+    I:MCA.EntityHuman.metadata=0
+    I:MCA.EntityHuman.rate=-1
     S:MantaRay.item=
     I:MantaRay.lexiconDisplaySize=40
     I:MantaRay.metadata=0
@@ -1368,6 +1524,12 @@ shedding {
     I:Thaumcraft.Wisp.lexiconDisplaySize=40
     I:Thaumcraft.Wisp.metadata=0
     I:Thaumcraft.Wisp.rate=-1
+
+    # Configuration of Shedding for ThaumicExploration.TaintacleMinion
+    S:ThaumicExploration.TaintacleMinion.item=
+    I:ThaumicExploration.TaintacleMinion.lexiconDisplaySize=40
+    I:ThaumicExploration.TaintacleMinion.metadata=0
+    I:ThaumicExploration.TaintacleMinion.rate=-1
 
     # Configuration of Shedding for ThaumicHorizons.ChocolateCow
     S:ThaumicHorizons.ChocolateCow.item=
@@ -2734,6 +2896,276 @@ shedding {
     I:npczombiemale.lexiconDisplaySize=40
     I:npczombiemale.metadata=0
     I:npczombiemale.rate=-1
+
+    # Configuration of Shedding for witchery.attackbat
+    S:witchery.attackbat.item=
+    I:witchery.attackbat.lexiconDisplaySize=40
+    I:witchery.attackbat.metadata=0
+    I:witchery.attackbat.rate=-1
+
+    # Configuration of Shedding for witchery.babayaga
+    S:witchery.babayaga.item=
+    I:witchery.babayaga.lexiconDisplaySize=40
+    I:witchery.babayaga.metadata=0
+    I:witchery.babayaga.rate=-1
+
+    # Configuration of Shedding for witchery.banshee
+    S:witchery.banshee.item=
+    I:witchery.banshee.lexiconDisplaySize=40
+    I:witchery.banshee.metadata=0
+    I:witchery.banshee.rate=-1
+
+    # Configuration of Shedding for witchery.cat
+    S:witchery.cat.item=
+    I:witchery.cat.lexiconDisplaySize=40
+    I:witchery.cat.metadata=0
+    I:witchery.cat.rate=-1
+
+    # Configuration of Shedding for witchery.corpse
+    S:witchery.corpse.item=
+    I:witchery.corpse.lexiconDisplaySize=40
+    I:witchery.corpse.metadata=0
+    I:witchery.corpse.rate=-1
+
+    # Configuration of Shedding for witchery.covenwitch
+    S:witchery.covenwitch.item=
+    I:witchery.covenwitch.lexiconDisplaySize=40
+    I:witchery.covenwitch.metadata=0
+    I:witchery.covenwitch.rate=-1
+
+    # Configuration of Shedding for witchery.darkmark
+    S:witchery.darkmark.item=
+    I:witchery.darkmark.lexiconDisplaySize=40
+    I:witchery.darkmark.metadata=0
+    I:witchery.darkmark.rate=-1
+
+    # Configuration of Shedding for witchery.death
+    S:witchery.death.item=
+    I:witchery.death.lexiconDisplaySize=40
+    I:witchery.death.metadata=0
+    I:witchery.death.rate=-1
+
+    # Configuration of Shedding for witchery.deathhorse
+    S:witchery.deathhorse.item=
+    I:witchery.deathhorse.lexiconDisplaySize=40
+    I:witchery.deathhorse.metadata=0
+    I:witchery.deathhorse.rate=-1
+
+    # Configuration of Shedding for witchery.demon
+    S:witchery.demon.item=
+    I:witchery.demon.lexiconDisplaySize=40
+    I:witchery.demon.metadata=0
+    I:witchery.demon.rate=-1
+
+    # Configuration of Shedding for witchery.ent
+    S:witchery.ent.item=
+    I:witchery.ent.lexiconDisplaySize=40
+    I:witchery.ent.metadata=0
+    I:witchery.ent.rate=-1
+
+    # Configuration of Shedding for witchery.eye
+    S:witchery.eye.item=
+    I:witchery.eye.lexiconDisplaySize=40
+    I:witchery.eye.metadata=0
+    I:witchery.eye.rate=-1
+
+    # Configuration of Shedding for witchery.familiar
+    S:witchery.familiar.item=
+    I:witchery.familiar.lexiconDisplaySize=40
+    I:witchery.familiar.metadata=0
+    I:witchery.familiar.rate=-1
+
+    # Configuration of Shedding for witchery.follower
+    S:witchery.follower.item=
+    I:witchery.follower.lexiconDisplaySize=40
+    I:witchery.follower.metadata=0
+    I:witchery.follower.rate=-1
+
+    # Configuration of Shedding for witchery.goblin
+    S:witchery.goblin.item=
+    I:witchery.goblin.lexiconDisplaySize=40
+    I:witchery.goblin.metadata=0
+    I:witchery.goblin.rate=-1
+
+    # Configuration of Shedding for witchery.goblingulg
+    S:witchery.goblingulg.item=
+    I:witchery.goblingulg.lexiconDisplaySize=40
+    I:witchery.goblingulg.metadata=0
+    I:witchery.goblingulg.rate=-1
+
+    # Configuration of Shedding for witchery.goblinmog
+    S:witchery.goblinmog.item=
+    I:witchery.goblinmog.lexiconDisplaySize=40
+    I:witchery.goblinmog.metadata=0
+    I:witchery.goblinmog.rate=-1
+
+    # Configuration of Shedding for witchery.hellhound
+    S:witchery.hellhound.item=
+    I:witchery.hellhound.lexiconDisplaySize=40
+    I:witchery.hellhound.metadata=0
+    I:witchery.hellhound.rate=-1
+
+    # Configuration of Shedding for witchery.hornedHuntsman
+    S:witchery.hornedHuntsman.item=
+    I:witchery.hornedHuntsman.lexiconDisplaySize=40
+    I:witchery.hornedHuntsman.metadata=0
+    I:witchery.hornedHuntsman.rate=-1
+
+    # Configuration of Shedding for witchery.illusionCreeper
+    S:witchery.illusionCreeper.item=
+    I:witchery.illusionCreeper.lexiconDisplaySize=40
+    I:witchery.illusionCreeper.metadata=0
+    I:witchery.illusionCreeper.rate=-1
+
+    # Configuration of Shedding for witchery.illusionSpider
+    S:witchery.illusionSpider.item=
+    I:witchery.illusionSpider.lexiconDisplaySize=40
+    I:witchery.illusionSpider.metadata=0
+    I:witchery.illusionSpider.rate=-1
+
+    # Configuration of Shedding for witchery.illusionZombie
+    S:witchery.illusionZombie.item=
+    I:witchery.illusionZombie.lexiconDisplaySize=40
+    I:witchery.illusionZombie.metadata=0
+    I:witchery.illusionZombie.rate=-1
+
+    # Configuration of Shedding for witchery.imp
+    S:witchery.imp.item=
+    I:witchery.imp.lexiconDisplaySize=40
+    I:witchery.imp.metadata=0
+    I:witchery.imp.rate=-1
+
+    # Configuration of Shedding for witchery.leonard
+    S:witchery.leonard.item=
+    I:witchery.leonard.lexiconDisplaySize=40
+    I:witchery.leonard.metadata=0
+    I:witchery.leonard.rate=-1
+
+    # Configuration of Shedding for witchery.lilith
+    S:witchery.lilith.item=
+    I:witchery.lilith.lexiconDisplaySize=40
+    I:witchery.lilith.metadata=0
+    I:witchery.lilith.rate=-1
+
+    # Configuration of Shedding for witchery.lordoftorment
+    S:witchery.lordoftorment.item=
+    I:witchery.lordoftorment.lexiconDisplaySize=40
+    I:witchery.lordoftorment.metadata=0
+    I:witchery.lordoftorment.rate=-1
+
+    # Configuration of Shedding for witchery.lostsoul
+    S:witchery.lostsoul.item=
+    I:witchery.lostsoul.lexiconDisplaySize=40
+    I:witchery.lostsoul.metadata=0
+    I:witchery.lostsoul.rate=-1
+
+    # Configuration of Shedding for witchery.louse
+    S:witchery.louse.item=
+    I:witchery.louse.lexiconDisplaySize=40
+    I:witchery.louse.metadata=0
+    I:witchery.louse.rate=-1
+
+    # Configuration of Shedding for witchery.mandrake
+    S:witchery.mandrake.item=
+    I:witchery.mandrake.lexiconDisplaySize=40
+    I:witchery.mandrake.metadata=0
+    I:witchery.mandrake.rate=-1
+
+    # Configuration of Shedding for witchery.mindrake
+    S:witchery.mindrake.item=
+    I:witchery.mindrake.lexiconDisplaySize=40
+    I:witchery.mindrake.metadata=0
+    I:witchery.mindrake.rate=-1
+
+    # Configuration of Shedding for witchery.mirrorface
+    S:witchery.mirrorface.item=
+    I:witchery.mirrorface.lexiconDisplaySize=40
+    I:witchery.mirrorface.metadata=0
+    I:witchery.mirrorface.rate=-1
+
+    # Configuration of Shedding for witchery.nightmare
+    S:witchery.nightmare.item=
+    I:witchery.nightmare.lexiconDisplaySize=40
+    I:witchery.nightmare.metadata=0
+    I:witchery.nightmare.rate=-1
+
+    # Configuration of Shedding for witchery.owl
+    S:witchery.owl.item=
+    I:witchery.owl.lexiconDisplaySize=40
+    I:witchery.owl.metadata=0
+    I:witchery.owl.rate=-1
+
+    # Configuration of Shedding for witchery.poltergeist
+    S:witchery.poltergeist.item=
+    I:witchery.poltergeist.lexiconDisplaySize=40
+    I:witchery.poltergeist.metadata=0
+    I:witchery.poltergeist.rate=-1
+
+    # Configuration of Shedding for witchery.reflection
+    S:witchery.reflection.item=
+    I:witchery.reflection.lexiconDisplaySize=40
+    I:witchery.reflection.metadata=0
+    I:witchery.reflection.rate=-1
+
+    # Configuration of Shedding for witchery.spectre
+    S:witchery.spectre.item=
+    I:witchery.spectre.lexiconDisplaySize=40
+    I:witchery.spectre.metadata=0
+    I:witchery.spectre.rate=-1
+
+    # Configuration of Shedding for witchery.spirit
+    S:witchery.spirit.item=
+    I:witchery.spirit.lexiconDisplaySize=40
+    I:witchery.spirit.metadata=0
+    I:witchery.spirit.rate=-1
+
+    # Configuration of Shedding for witchery.toad
+    S:witchery.toad.item=
+    I:witchery.toad.lexiconDisplaySize=40
+    I:witchery.toad.metadata=0
+    I:witchery.toad.rate=-1
+
+    # Configuration of Shedding for witchery.treefyd
+    S:witchery.treefyd.item=
+    I:witchery.treefyd.lexiconDisplaySize=40
+    I:witchery.treefyd.metadata=0
+    I:witchery.treefyd.rate=-1
+
+    # Configuration of Shedding for witchery.vampire
+    S:witchery.vampire.item=
+    I:witchery.vampire.lexiconDisplaySize=40
+    I:witchery.vampire.metadata=0
+    I:witchery.vampire.rate=-1
+
+    # Configuration of Shedding for witchery.villageguard
+    S:witchery.villageguard.item=
+    I:witchery.villageguard.lexiconDisplaySize=40
+    I:witchery.villageguard.metadata=0
+    I:witchery.villageguard.rate=-1
+
+    # Configuration of Shedding for witchery.werevillager
+    S:witchery.werevillager.item=
+    I:witchery.werevillager.lexiconDisplaySize=40
+    I:witchery.werevillager.metadata=0
+    I:witchery.werevillager.rate=-1
+
+    # Configuration of Shedding for witchery.wingedmonkey
+    S:witchery.wingedmonkey.item=
+    I:witchery.wingedmonkey.lexiconDisplaySize=40
+    I:witchery.wingedmonkey.metadata=0
+    I:witchery.wingedmonkey.rate=-1
+
+    # Configuration of Shedding for witchery.witchhunter
+    S:witchery.witchhunter.item=
+    I:witchery.witchhunter.lexiconDisplaySize=40
+    I:witchery.witchhunter.metadata=0
+    I:witchery.witchhunter.rate=-1
+
+    # Configuration of Shedding for witchery.wolfman
+    S:witchery.wolfman.item=
+    I:witchery.wolfman.lexiconDisplaySize=40
+    I:witchery.wolfman.metadata=0
+    I:witchery.wolfman.rate=-1
     S:witherSkeleton.item=
     I:witherSkeleton.lexiconDisplaySize=40
     I:witherSkeleton.metadata=0
