--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -170,6 +170,9 @@ worldgen {
         60
         69
      >
+
+    # Only turn this on if you're absolutely sure. [default: false]
+    B:neverRescanChunks=false
 }
 
 
