--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -1,20 +1,20 @@
 # Configuration file
 
 "client specific" {
-    B:"[C32C35B68] Console Loading Info"=true
-    B:"[C3E6D162B] Custom/Donator Renders"=true
-    B:"[D087D1CA5] Disable Alpha Clipping in WorldRenderer"=true
-    B:"[DAA7CE173] Debug Mode"=false
-    B:"[DAB614342] Disable Renders For Debug"=false
-    B:"[DCBEB5A9C] Disable Hotbar Swapping"=false
-    I:"[DE537279B] Debug Overlay Key (LWJGL ID)"=15
-    B:"[EA0CEDE7D] Enable Vernal Amusement Behavior"=true
-    B:"[I2ED0CD60] Increase sound channel count"=true
-    B:"[LCBB2F45D] Log Loading Info To Separate File"=false
-    B:"[LF79D165F] Log errors to chat"=true
-    I:"[PEEE9A4C7] Particle Limit (Vanilla = 4000)"=4000
-    B:"[SB57CAB47] Show TileEntity NBT when using Debug Key"=false
-    B:"[SE8D7CB8B] Sort Creative Tabs Alphabetically"=true
+    B:"[C033DAA41] Console Loading Info"=true
+    B:"[C0EE76504] Custom/Donator Renders"=true
+    B:"[D7AF7304C] Debug Mode"=false
+    B:"[D7BDB921B] Disable Renders For Debug"=false
+    B:"[D9C65A975] Disable Hotbar Swapping"=false
+    I:"[DB5B17674] Debug Overlay Key (LWJGL ID)"=15
+    B:"[DD8F76B7E] Disable Alpha Clipping in WorldRenderer"=true
+    B:"[E71492D56] Enable Vernal Amusement Behavior"=true
+    B:"[IFF4B1C39] Increase sound channel count"=true
+    B:"[L9C2D4336] Log Loading Info To Separate File"=false
+    B:"[LC8176538] Log errors to chat"=true
+    I:"[PBF63F3A0] Particle Limit (Vanilla = 4000)"=4000
+    B:"[S85F6FA20] Show TileEntity NBT when using Debug Key"=false
+    B:"[SB9521A64] Sort Creative Tabs Alphabetically"=true
 }
 
 
