--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -48,15 +48,15 @@
 
 
 "client specific" {
-    B:"[C680FA838] Color Blind Mode"=false
-    D:"[E1736FE4B] Engine Volume"=1.0
-    D:"[MB0CC4635] Machine Volume Multiplier"=1.0
-    B:"[R3B2C274D] Reload Handbook Data on Open"=false
-    B:"[R5CB4A6D2] Render projector lines"=true
-    B:"[R875BC285] Run power transfer code on client"=false
-    B:"[S42337B12] Show Force Fields"=true
-    I:"[SD64ECCDD] Sprinkler Particle Density"=4
-    B:"[TCEAB0FF3] Tools Clear Chat"=true
+    B:"[C3889F711] Color Blind Mode"=false
+    D:"[EE7B14D24] Engine Volume"=1.0
+    D:"[M8146950E] Machine Volume Multiplier"=1.0
+    B:"[R0BA67626] Reload Handbook Data on Open"=false
+    B:"[R2D2EF5AB] Render projector lines"=true
+    B:"[R57D6115E] Run power transfer code on client"=false
+    B:"[S12ADC9EB] Show Force Fields"=true
+    I:"[SA6C91BB6] Sprinkler Particle Density"=4
+    B:"[T9F255ECC] Tools Clear Chat"=true
 }
 
 
