--- a/config/agricraft/Configuration.cfg
+++ b/config/agricraft/Configuration.cfg
@@ -46,10 +46,11 @@ agricraft {
 
 
 compatibility {
+    # set to false to disable compatibility for AWWayofTime [default: true]
+    B:AWWayofTime=true
+
     # set to false to disable compatibility for AppleCore [default: true]
     B:AppleCore=true
-
-    # set to false to disable compatibility for BiomesOPlenty [default: true]
     B:BiomesOPlenty=true
 
     # set to false to disable compatibility for Botania [default: true]
@@ -75,14 +76,8 @@ compatibility {
 
     # set to false to disable compatibility for MineTweaker3 [default: true]
     B:MineTweaker3=true
-
-    # set to false to disable seed mutations in NEI [default: true]
     B:"NEI Mutations"=true
-
-    # set to false to disable seed products in NEI [default: true]
     B:"NEI Products"=true
-
-    # set to false to disable compatibility for Natura [default: true]
     B:Natura=false
 
     # set to false to disable compatibility for NotEnoughItems [default: true]
@@ -106,6 +101,9 @@ compatibility {
 
     # set to false to disable compatibility for harvestcraft [default: true]
     B:harvestcraft=true
+
+    # set to false to disable compatibility for witchery [default: true]
+    B:witchery=true
 }
 
 
