--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -158,6 +158,9 @@
     # frequency of medium island seeds, about 250x500, but they tend to break up into archipelagos
     I:"Incidence of Islands,Medium"=30
 
+    # Rounds of continent and large island expansion in oceanic worlds (with separateLandmasses off). More makes continents larger and oceans narrower. Default is 1.
+    I:"Land Expansion Rounds"=1
+
     # True mostly stops landmasses merging.With default settings you will get an oceanic world if true and a continental world if false
     B:SeparateLandmasses=false
 }
