--- a/config/LunatriusCore.cfg
+++ b/config/LunatriusCore.cfg
@@ -13,6 +13,7 @@ versioncheck {
     # A list of known updates. Deleting versions from the list will remind you about them again.
     S:knownVersions <
         LunatriusCore 1.1.2.21
+        Schematica 1.7.6.131
         Stackie 1.6.0.36
      >
 
