--- a/config/Reika/ExpandedRedstone.cfg
+++ b/config/Reika/ExpandedRedstone.cfg
@@ -1,7 +1,7 @@
 # Configuration file
 
 "client specific" {
-    B:"[TAEF90CCF] Ticking Noises"=false
+    B:"[T7F735BA8] Ticking Noises"=true
 }
 
 
