--- a/config/advRocketry/advancedRocketry.cfg
+++ b/config/advRocketry/advancedRocketry.cfg
@@ -53,6 +53,10 @@ biomes {
 gasmining {
     # Multiplier for the amount of time gas collection missions take
     D:gasMissionMultiplier=1.0
+
+    # list of fluid names that can be harvested as Gas [default: ]
+    S:harvestableGasses <
+     >
 }
 
 
@@ -88,6 +92,23 @@ general {
     # Should Electric Mushrooms be able to spawn lightning
     B:electricPlantsSpawnLightning=true
 
+    # list entities which should not be affected by atmosphere properties [default: ]
+    S:entityAtmBypass <
+     >
+
+    # List of oredictionary names of ores allowed to be mined by the laser drill if surface drilling is disabled
+    S:laserDrillOres <
+        oreIron
+        oreGold
+        oreCopper
+        oreTin
+        oreRedstone
+        oreDiamond
+     >
+
+    # If true the orbital laser will actually mine blocks on the planet below
+    B:laserDrillPlanet=false
+
     # If true the machines from AdvancedRocketry will produce things like plates/rods for other mods even if Advanced Rocketry itself does not use the material (This can increase load time)
     B:makeMaterialsForOtherMods=true
 
@@ -96,6 +117,7 @@ general {
 
     # How many units of fuel should each Dilithium Crystal give to warp ships
     I:pointsPerDilithium=500
+    B:resetPlanetsFromXML=false
 
     # Should the cutting machine be able to cut vanilla wood into planks
     B:sawMillCutVanillaWood=true
@@ -115,6 +137,10 @@ general {
 
     # Multplier for terraforming speed
     D:terraformMult=1.0
+
+    # Mod:Blockname  for example "minecraft:chest" [default: ]
+    S:torchBlocks <
+     >
 
     # Amount of damage taken every second in a vacuum
     I:vacuumDamage=1
@@ -189,7 +215,7 @@ planet {
     # Prevents any vanilla biomes from spawning on planets [default: false]
     B:blackListVanillaBiomes=false
 
-    # Dimensions including and after this number are allowed to be made into planets [range: -127 ~ 127, default: 2]
+    # Dimensions including and after this number are allowed to be made into planets [range: -127 ~ 8000, default: 2]
     I:minDimension=10
 
     rockets {
