--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -663,6 +663,7 @@ wellofsufferingblacklist {
     B:fossil.Tyrannosaurus=false
     B:fossil.Velociraptor=false
     B:headcrumbs.Human=false
+    B:lootablebodies_EntityLootableBody=false
     B:witchery.attackbat=false
     B:witchery.babayaga=false
     B:witchery.banshee=false
