--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -127,12 +127,18 @@ plants {
 
 
 seasons {
+    # Enable this to match cold beach temp with extreme hills temp. [default: false]
+    B:AdjustStoneBeachTemp=false
     I:DimensionBlacklist <
         1
      >
 
     # Allows snow to pile up when it snows and melt away again. [default: true]
     B:EnableSnowAccumulation=false
+
+    # Problems with frozen oceans? Try turning this on.
+    # It will make any ice block that gets an update tick melt if the temp is > 0.2 (20F) [default: false]
+    B:InstantlyUnfreezeIce=false
 
     # Enable to see baseline temp/rain modifiers in console. [default: false]
     B:LogWeather=false
