--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -8,16 +8,16 @@
 
 
 "client specific" {
-    B:"[CA9FA691C] Connected Crystalline Stone Textures"=false
-    B:"[D478C4F12] Dye Block Particles"=true
-    B:"[DB361B44B] Disable Pendant Particles"=true
-    I:"[E29E1C3CF] Energy Buffer Overlay Location"=0
-    B:"[ED6454F12] Ender Forest Coloring"=false
-    B:"[L01012BFB] Lamp Noises"=true
-    I:"[P1ACF8E78] Progression Notification Duration"=800
-    B:"[P23C3C941] Play Dimension Join Sound For Others"=true
-    B:"[R0BA67626] Reload Handbook Data on Open"=false
-    B:"[UD8F2C171] Use vanilla keybind system for ability selection GUI"=false
+    B:"[CD9801A43] Connected Crystalline Stone Textures"=false
+    B:"[D77120039] Dye Block Particles"=true
+    B:"[DE2E76572] Disable Pendant Particles"=true
+    B:"[E05CB0039] Ender Forest Coloring"=false
+    I:"[E596774F6] Energy Buffer Overlay Location"=0
+    B:"[L3086DD22] Lamp Noises"=true
+    I:"[P4A553F9F] Progression Notification Duration"=800
+    B:"[P53497A68] Play Dimension Join Sound For Others"=true
+    B:"[R3B2C274D] Reload Handbook Data on Open"=false
+    B:"[U08787298] Use vanilla keybind system for ability selection GUI"=false
 }
 
 
