--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -8,7 +8,7 @@ general {
     I:waila.cfg.gradient2=2621567
     I:waila.cfg.heartsperline=20
     B:waila.cfg.keybind=true
-    B:waila.cfg.liquid=true
+    B:waila.cfg.liquid=false
     I:waila.cfg.maxhpbeforetext=40
     B:waila.cfg.metadata=false
     B:waila.cfg.newfilters=true
@@ -17,7 +17,7 @@ general {
     I:waila.cfg.scale=100
     B:waila.cfg.shiftblock=false
     B:waila.cfg.shiftents=false
-    B:waila.cfg.show=true
+    B:waila.cfg.show=false
     B:waila.cfg.showmode=true
 }
 
