--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -13,6 +13,9 @@
     # Biome size, exponential: 4 is regular and 6 is large biomes
     I:"Biome Size"=4
 
+    # Use red sand mesa for mesa borders. False uses desert like vanilla
+    B:"Mesas for mesa borders"=false
+
     # per thousand; vanilla is 10
     I:"Mushroom Island Incidence"=0
 
@@ -112,6 +115,12 @@
 
     # half the climate zone size from vanilla, unless quartering
     B:"Half Zone Size"=true
+
+    # Use Ice Mountains instead of Ice Plains in mountain chain areas
+    B:"Ice Mountains in Mountain Chains"=true
+
+    # Use Mesas as mountains in mountain chain areas
+    B:"Mesas in Mountain Chains"=true
 
     # Place mountains in chains
     B:"Mountains in Mountain Chains"=true
@@ -308,6 +317,7 @@ vanillabiomeincidences {
     I:"Desert Incidence"=30
     I:"Extreme Hills Incidence"=20
     I:"Forest Incidence"=20
+    I:"Ice Mountains Incidence"=0
     I:"Ice Plains Incidence"=30
     I:"Jungle Incidence"=5
     I:"Mega Taiga Incidence"=5
