--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -34,6 +34,18 @@ world--6053546774151357621 {
 }
 
 
+world-166746739182352355 {
+    I:extinct-115=21
+    I:extinct-134=22
+    I:extinct-148=20
+    I:extinct-154=27
+    I:extinct-156=13
+    I:extinct-201=30
+    I:extinct-43=12
+    I:extinct-88=15
+}
+
+
 world-3542167839976514568 {
     I:extinct-115=5
     I:extinct-134=5
