--- a/config/rftools/dimlets.cfg
+++ b/config/rftools/dimlets.cfg
@@ -79,6 +79,7 @@ dimletsettings {
     I:rarity.Liquid.iron.molten=5
     I:rarity.Liquid.lava=3
     I:rarity.Liquid.lead.molten=5
+    I:"rarity.Liquid.life essence"=3
     I:rarity.Liquid.nickel.molten=5
     I:rarity.Liquid.obsidian.molten=3
     I:rarity.Liquid.oil=3
@@ -89,6 +90,7 @@ dimletsettings {
     I:rarity.Liquid.steel.molten=6
     I:rarity.Liquid.tin.molten=4
     I:rarity.Liquid.water=1
+    I:"rarity.Liquid.witchery:fluidspirit"=6
     I:rarity.Material.tile.FluoriteOre=2
     I:rarity.Material.tile.Ore1=3
     I:rarity.Material.tile.Ore2=3
@@ -278,6 +280,7 @@ dimletsettings {
     I:rfcreate.Liquid.iron.molten=10000
     I:rfcreate.Liquid.lava=10000
     I:rfcreate.Liquid.lead.molten=15000
+    I:"rfcreate.Liquid.life essence"=2000
     I:rfcreate.Liquid.nickel.molten=17000
     I:rfcreate.Liquid.obsidian.molten=3000
     I:rfcreate.Liquid.oil=15000
@@ -288,6 +291,7 @@ dimletsettings {
     I:rfcreate.Liquid.steel.molten=25000
     I:rfcreate.Liquid.tin.molten=9000
     I:rfcreate.Liquid.water=150
+    I:"rfcreate.Liquid.witchery:fluidspirit"=50000
     I:rfcreate.Material.None=200
     I:rfcreate.Material.tile.FluoriteOre=6000
     I:rfcreate.Material.tile.Ore1=18000
@@ -484,6 +488,7 @@ dimletsettings {
     I:rfmaintain.Liquid.iron.molten=7500
     I:rfmaintain.Liquid.lava=1500
     I:rfmaintain.Liquid.lead.molten=1000
+    I:"rfmaintain.Liquid.life essence"=1000
     I:rfmaintain.Liquid.nickel.molten=1027
     I:rfmaintain.Liquid.obsidian.molten=2500
     I:rfmaintain.Liquid.oil=3000
@@ -494,6 +499,7 @@ dimletsettings {
     I:rfmaintain.Liquid.steel.molten=12500
     I:rfmaintain.Liquid.tin.molten=6000
     I:rfmaintain.Liquid.water=1
+    I:"rfmaintain.Liquid.witchery:fluidspirit"=20000
     I:rfmaintain.Material.None=5
     I:rfmaintain.Material.tile.FluoriteOre=700
     I:rfmaintain.Material.tile.Ore1=2400
@@ -688,6 +694,7 @@ dimletsettings {
     I:ticks.Liquid.iron.molten=1000
     I:ticks.Liquid.lava=250
     I:ticks.Liquid.lead.molten=800
+    I:"ticks.Liquid.life essence"=250
     I:ticks.Liquid.nickel.molten=900
     I:ticks.Liquid.obsidian.molten=400
     I:ticks.Liquid.oil=300
@@ -698,6 +705,7 @@ dimletsettings {
     I:ticks.Liquid.steel.molten=2000
     I:ticks.Liquid.tin.molten=500
     I:ticks.Liquid.water=10
+    I:"ticks.Liquid.witchery:fluidspirit"=1000
     I:ticks.Material.None=50
     I:ticks.Material.tile.FluoriteOre=120
     I:ticks.Material.tile.Ore1=500
