--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -17,7 +17,7 @@ general {
     I:waila.cfg.scale=100
     B:waila.cfg.shiftblock=false
     B:waila.cfg.shiftents=false
-    B:waila.cfg.show=false
+    B:waila.cfg.show=true
     B:waila.cfg.showmode=true
 }
 
