--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -25,7 +25,7 @@ animals {
     B:AddGoats=true
 
     # Enables/disables lizards [default: true]
-    B:AddLizards=true
+    B:AddLizards=false
 
     # Lower's Chicken maximum age by this factor (maxAge = defaultMaxAge / ageFactor).
     #  [range: 0 ~ 100, default: 2]
