--- a/config/ZombieAwareness/Features.cfg
+++ b/config/ZombieAwareness/Features.cfg
@@ -5,7 +5,7 @@
     B:awareness_Light=true
 
     # Spawn scent/blood sense sources for monsters to track
-    B:awareness_Scent=true
+    B:awareness_Scent=false
 
     # Spawn sound sense sources for monsters to track
     B:awareness_Sound=true
